--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,18 @@ annotated-types==0.7.0
 anyio==4.8.0
 astor==0.8.1
 attrs==25.1.0
+audioread==3.0.1
 blake3==1.0.4
 cachetools==5.5.1
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpickle==3.1.1
 colorful==0.5.6
 compressed-tensors==0.9.1
+decorator==5.1.1
+decord==0.6.0
 depyf==0.18.0
 dill==0.3.9
 diskcache==5.6.3
@@ -36,27 +40,31 @@ h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
-huggingface==0.0.1
 huggingface-hub==0.28.1
 idna==3.10
 importlib_metadata==8.6.1
 iniconfig==2.0.0
-inquirerpy==0.3.4
 interegular==0.3.3
 Jinja2==3.1.5
 jiter==0.8.2
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 lark==1.2.2
+lazy_loader==0.4
+librosa==0.10.2.post1
+llvmlite==0.44.0
 lm-format-enforcer==0.10.10
 MarkupSafe==3.0.2
 mistral_common==1.5.3
+more-itertools==10.6.0
 mpmath==1.3.0
 msgpack==1.1.0
 msgspec==0.19.0
 multidict==6.1.0
 nest-asyncio==1.6.0
 networkx==3.4.2
+numba==0.61.0
 numpy==1.26.4
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
@@ -72,6 +80,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 openai==1.63.2
+openai-whisper==20240930
 opencensus==0.11.4
 opencensus-context==0.1.3
 opencv-python-headless==4.11.0.86
@@ -79,13 +88,12 @@ outlines==0.1.11
 outlines_core==0.1.26
 packaging==24.2
 partial-json-parser==0.2.1.1.post5
-pfzy==0.3.4
 pillow==11.1.0
 platformdirs==4.3.6
 pluggy==1.5.0
+pooch==1.8.2
 prometheus-fastapi-instrumentator==7.0.2
 prometheus_client==0.21.1
-prompt_toolkit==3.0.50
 propcache==0.2.1
 proto-plus==1.26.0
 protobuf==5.29.3
@@ -96,8 +104,10 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pybind11==2.13.6
 pycountry==24.6.1
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+pynvml==12.0.0
 pytest==8.3.4
 python-dotenv==1.0.1
 PyYAML==6.0.2
@@ -109,14 +119,19 @@ requests==2.32.3
 rpds-py==0.22.3
 rsa==4.9
 safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.2
 sentencepiece==0.2.0
 setuptools==75.8.0
 six==1.17.0
 smart-open==7.1.0
 smmap==5.0.1
 sniffio==1.3.1
+soundfile==0.13.1
+soxr==0.5.0.post1
 starlette==0.45.3
 sympy==1.13.1
+threadpoolctl==3.5.0
 tiktoken==0.9.0
 tokenizers==0.21.0
 torch==2.5.1
@@ -132,7 +147,6 @@ uvloop==0.21.0
 virtualenv==20.29.2
 vllm==0.7.2
 watchfiles==1.0.4
-wcwidth==0.2.13
 websockets==15.0
 wrapt==1.17.2
 xformers==0.0.28.post3
